fixing bug that caused sidenav to appear on small screens if page was refreshed

--- a/static/style.css
+++ b/static/style.css
@@ -137,6 +137,12 @@ h1, h2, strong {
   padding-top: 60px;
 }
 
+@media only screen and (max-width: 1023px) {
+  .sidenav {
+    display: none;
+  }
+}
+
 .sidenav_button {
   text-decoration: none;
   color: #2d2d2d;
